# yachiyo

yachiyo-completion/: Cargo.toml
yachiyo-completion/src/: lib.rs  openai.rs  provider.rs  types.rs
yachiyo-completion/tests/: streaming_test.rs
yachiyo-rag/: Cargo.toml
yachiyo-rag/src/: lib.rs  openai.rs  provider.rs  types.rs
yachiyo-rag/tests/: ollama_test.rs
