[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["stream", "json"] }
futures = "0.3"
async-stream = "0.3"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
